--- a/firebase.json
+++ b/firebase.json
@@ -3,5 +3,7 @@
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [{"source": "**", "destination": "/index.html"}]
-  }
+  },
+  "storage": {"rules": "storage.rules"},
+  "functions": {"source": "functions"}
 }
