--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hebcal/core": "^6.0.8",
     "date-fns": "^4.1.0",
     "firebase": "^12.9.0",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.1"
