--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   },
   "dependencies": {
     "@hebcal/core": "^6.0.8",
+    "@tiptap/extension-highlight": "^3.20.0",
+    "@tiptap/extension-horizontal-rule": "^3.20.0",
+    "@tiptap/extension-placeholder": "^3.20.0",
+    "@tiptap/extension-task-item": "^3.20.0",
+    "@tiptap/extension-task-list": "^3.20.0",
+    "@tiptap/pm": "^3.20.0",
+    "@tiptap/react": "^3.20.0",
+    "@tiptap/starter-kit": "^3.20.0",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.18.0",
     "firebase": "^12.9.0",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
